# rules_python_numpy

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  gazelle_python.yaml  langchain_test.py  main.py  numpy_test.py  pydantic_test.py  requirements.in  requirements_darwin_lock.txt  requirements_linux_lock.txt  requirements_lock.txt  test.py
.github/: renovate.json
.github/workflows/: automerge.yaml  bazel.yml  gazelle-python-manifest-update.yaml
bzl/patches/: nkey0-circulardeps.patch
