load(
    "@pypi//:requirements.bzl",
    "data_requirement",
    "dist_info_requirement",
    "entry_point",
    "requirement",
)
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "@pypi_requests//:pkg",
    ],
)

py_test(
    name = "test",
    size = "small",  # implicit short == 60s
    srcs = ["test.py"],
    deps = [":main"],
)

py_test(
    name = "numpy_test",
    size = "small",  # implicit short == 60s
    srcs = ["numpy_test.py"],
    deps = [
        requirement("numpy"),
    ],
)

py_test(
    name = "pydantic_test",
    size = "small",  # implicit short == 60s
    srcs = ["pydantic_test.py"],
    deps = [
        requirement("pydantic"),
    ],
)

py_test(
    name = "langchain_test",
    size = "small",
    timeout = "eternal",  # long==900 seconds, eternal==3600
    srcs = ["langchain_test.py"],
    tags = ["manual"],
    deps = [
        requirement("langchain"),
        requirement("torch"),
        requirement("torchaudio"),
        requirement("torchvision"),
        requirement("transformers"),
    ],
)

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_linux = "requirements_linux.in",
    requirements_txt = "requirements_lock.txt",
)
