module(
    name = "rules_python_numpy",
    version = "0.0.0",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    #ignore_root_user_error = True,
    is_default = True,
    python_version = "3.9",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.9",
    requirements_darwin = "//:requirements_darwin_lock.txt",
    requirements_linux = "//:requirements_linux_lock.txt",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
